--- a/index.html
+++ b/index.html
@@ -205,14 +205,7 @@ if ($_POST) {
 
             <div class="dropdown--list">
               <a
-                href="https://ddorammeon.github.io/faq-vn/"
-                class="dropdown--item dropdown--item__active"
-              >
-                <img src="./assets/img/flag.png" alt="" class="language__img" />
-                <p class="language">Tiếng Việt</p>
-              </a>
-              <a
-                href="https://ddorammeon.github.io/jp-test/"
+                href="https://ddorammeon.github.io/faq-jp/"
                 class="dropdown--item"
               >
                 <img
@@ -221,6 +214,13 @@ if ($_POST) {
                   class="language__img"
                 />
                 <p class="language">Tiếng Nhật</p>
+              </a>
+              <a
+                href="https://ddorammeon.github.io/faq-vn/"
+                class="dropdown--item dropdown--item__active"
+              >
+                <img src="./assets/img/flag.png" alt="" class="language__img" />
+                <p class="language">Tiếng Việt</p>
               </a>
             </div>
           </div>
