--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ if ($_POST) {
                 class="dropdown--item dropdown--item__active"
               >
                 <img src="./assets/img/flag.png" alt="" class="language__img" />
-                <p class="language">Tiếng Việt</p>
+                <p class="language">ベトナム語</p>
               </a>
             </div>
           </div>
